# Tyrannosaurus

./: .gitmodules  CMakeLists.txt
ASSETS/: fs.glsl  shader.glsl  vs.glsl  vs2.glsl
Tyrannosaurus/: CMakeLists.txt  Tyrannosaurus.cpp  Tyrannosaurus.h
Tyrannosaurus/ASSETS/: fs.glsl  shader.basic  vs.glsl
Tyrannosaurus/src/: Shader.cpp  Shader.h  Texture.cpp  Texture.h  main.cpp
Tyrannosaurus/src/Engine/: Camera.h  Shader.cpp  Shader.h  Texture.h  Window.cpp  Window.h
Tyrannosaurus/src/Event/: event.h  keyboard.h  keyboardevent.h  mouse.h  mouseevent.h  window.cpp  window.h  windowevent.h
Tyrannosaurus/src/Game/: main.cpp
